force-app/main/default/objects/FulfillmentOrder/fields/PersonContact__c.field-meta.xml
<CustomField>
    <fullName>PersonContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this for MC and CDP clouds. This field will update only record.account is Person Account.</description>
    <label>Person Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>