force-app/main/default/objects/FulfillmentOrder/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO_ROUTING</fullName>
                <default>true</default>
                <label>NO_ROUTING</label>
            </value>
            <value>
                <fullName>ROUTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>