force-app/main/default/objects/FulfillmentOrder/validationRules/Special_Order_Cant_Move_to_Cancel.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Order_Cant_Move_to_Cancel</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Special_Order__c = TRUE,
 ISPICKVAL( Status , &quot;Canceled&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Special order  cannot be cancel</errorMessage>
</ValidationRule>