force-app/main/default/objects/FulfillmentOrder/listViews/all_fulfillment_orders.listView-meta.xml
<ListView>
    <fullName>all_fulfillment_orders</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>OrderSummary</columns>
    <columns>Invoice</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order</field>
        <operation>equals</operation>
        <value>R000009216</value>
    </filters>
    <label>All Fulfillment Orders</label>
</ListView>